2025-01-20 Viewer 로직 추가 DTO-DB 연계 수정 xml 쿼리 수정 css, html 수정